# SurfaceParameterization

./: CMakeLists.txt  main.cpp
data/: hexagonOutput.off
include/: AdjacencyMatrix.h  HalfEdge.h
